Starting to update weekly entries to match critical path

--- a/wk01content.html
+++ b/wk01content.html
@@ -223,7 +223,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> <a href="https://www.irobotweb.com/~/media/MainSite/PDFs/About/STEM/Create/Create2_PrimeSense.pdf">Robotic Vacuum and Floor Scrubber</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> <a href="https://www.youtube.com/watch?v=-iXq85T3K6w">Lumi</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Rover.</li>
-      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> L-wing rooftop solar system (PLC knowledge helpful).</li>
+      <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> L-wing rooftop solar system (PLC knowledge helpful).<a href="http://www.sma-america.com/products/solarinverters.html">Solar</a></li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://software.farmbot.io/docs">Farmbot</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://search.rpxcorp.com/litigation_documents/12423597">Small engine electronic control unit</a> with <a href="https://www.youtube.com/watch?v=DG4I4XH8tg4">solenoid effector</a>, <a href="https://www.youtube.com/watch?v=toDAgcdkQyk">acrylic block</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Portable solar system.</li>
