--- a/wk03content.html
+++ b/wk03content.html
@@ -4,13 +4,13 @@
  </HEADER>
 
  <SECTION ID="Section_3">
-  <H3>Week 3 Hardware  (A - Monday Sept. 18, B - Friday Sept. 15)</H3>
+  <H3>Week 3 Hardware</H3>
   <p>
    <ul>
  	<li>Project Schedule Due (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week3RubricforProjectSchedule.xml">rubric</a>).</li>
  	<li>Budget Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>.</li>
     <li>Here is a suggestion when forming your groups for 2017-2018 based on the information I have recieved so far:
-	<li>2017-2018 Monday (A) Projects:
+	<li>2018-2019 A Projects:
 	 <ol>
 	  <li>Locker: Yohaan, Stanley, Jeremy.</li>
 	  <li>Health: Mohita, Maheshwerie, Karandeep.</li>
@@ -21,9 +21,9 @@
 	  <li>Home Security: Vivek, Karel.</li>
      </ol>
 	</li>
-	<li>2017-2018 Mixed (A/B) Projects:
+	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-	  <li><a href="http://www.sma-america.com/products/solarinverters.html">Solar</a>: Johnson, Adrian, Raphael.</li>
+	  <li>Johnson, Adrian, Raphael.</li>
 	  <li>Robot Arm: Daniel, Aldous, Eric.</li>
 	  <li>PiRover: Christopher, Lawrence.</li>
 	  <li>Parts Crib: David, Oluwatosin, Mohand.</li>
@@ -31,7 +31,7 @@
 	  <li>Perhaps an automated sorting system: Bojan, Alexandra, Neille.</li>
 	 </ol>
 	</li>
-	<li>2017-2018 Friday (B) Projects:
+	<li>2018-2019 B Projects:
 	 <ol>
 	  <li>Robotic Navigation: Kevin, Raymond, Kyle.</li>
       <li>Crystal Fountains: Erick, Slav, Heakeme.</li>
