--- a/wk05content.html
+++ b/wk05content.html
@@ -5,7 +5,7 @@
  
  
  <SECTION ID="Section_5">
-  <H3>Week 5 Hardware (A - Monday Oct. 2, B - Friday Sept. 29)</H3>
+  <H3>Week 5 Hardware</H3>
   
   <H3>Reading Days</H3>
   <p>
@@ -14,7 +14,8 @@
 	<li>Sent your Gerber files to Vlad/Kelly.</li>
  	<li>Blinked an LED on a crib Pi <a href="https://six0four.github.io/StudentSenseHat/cribpi.html">getting started https://six0four.github.io/StudentSenseHat/cribpi.html</a>.</li>
 	<li>Completed <a href="https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html">https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html</a></li>
-	<li>Completed your Student Sense Hat soldering.</li> 
+	<li>Reviewed: <a href="https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true">https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true</a></li>
+	<li>Completed your PCB soldering.</li> 
    </ul>
   </p>
  </SECTION>
