--- a/wk06content.html
+++ b/wk06content.html
@@ -4,7 +4,7 @@
  </HEADER>
 	
  <SECTION ID="Section_6">
-  <H3>Week 6 Hardware (A - Monday Oct. 16, B - Friday Oct. 13)</H3>
+  <H3>Week 6 Hardware</H3>
   <p>
    <ul>
     <li>Show your acquisitions.</li>
