--- a/wk08content.html
+++ b/wk08content.html
@@ -4,7 +4,7 @@
  </HEADER>
 
  <SECTION ID="Section_8">
-  <H3>Week 8 Hardware (A - Monday Oct. 30, B - Friday Oct. 27)</H3>
+  <H3>Week 8 Hardware</H3>
   <p>
    <ul>
 	<li>This week is the power-up milestone which will be peer graded (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
