--- a/wk09content.html
+++ b/wk09content.html
@@ -4,7 +4,7 @@
  </HEADER>
 
  <SECTION ID="Section_9">
-  <H3>Week 9 Hardware (A - Monday Nov. 6, B - Friday Nov. 3)</H3>
+  <H3>Week 9 Hardware</H3>
   <p>
    <ul>
 	<li>This week the placard (one per group) is due.</li>
@@ -17,7 +17,9 @@
      <li>a few seconds of the power up; and,</li>
      <li>a few seconds about the functionality you plan to demonstrate at the open house.</li></ul>
 	</li>
-	<li>The open house demonstration will take place in J202. We will have to reconfigure the room (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week10J202OpenHouse.vsdx">floorplan</a>) and note that some of the power outlets do not work so not all of you will have power. Let me know your table choice next week.</li>
+    <li>Start off by watching some soldering <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos</a>.</li>
+	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a>
+	<li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad their email address is prototypelab_at_humber.ca.</li>
    </ul>
   </p>
  </SECTION> 
