--- a/wk10content.html
+++ b/wk10content.html
@@ -5,7 +5,7 @@
 
 
  <SECTION ID="Section_10">
-  <H3>Week 10 Hardware (A - Monday Nov. 13, B - Friday Nov. 10)</H3>
+  <H3>Week 10 Hardware</H3>
   <p>
    <ul>
 	<li>This week the Build Video (as described in week 8) is due including demonstration of functional hardware.</li>
