--- a/wk11content.html
+++ b/wk11content.html
@@ -5,7 +5,7 @@
 
  
  <SECTION ID="Section_11">
-  <H3>Week 11 Hardware (A - Monday Nov. 13, B - Friday Nov. 17)</H3>
+  <H3>Week 11 Hardware</H3>
   <p>
    <ul>
 	<li>Progress Report Due, Hardware Demonstration, peer (and guest) graded to an average of 80% in class or at the optional option house.
