--- a/wk12content.html
+++ b/wk12content.html
@@ -5,7 +5,7 @@
 
 
  <SECTION ID="Section_12">
- <H3>Week 12 Hardware (A - Optional Saturday Nov. 18)</H3>
+ <H3>Week 12 Hardware</H3>
   <p>
    <ul>
 	Fall Open House Saturday November 18 10am – 2pm. Remember to take note of guest feedback and questions to include in your technical report.</li>
