--- a/wk14content.html
+++ b/wk14content.html
@@ -5,7 +5,7 @@
 
 
  <SECTION ID="Section_14">
-  <H3>Week 14 Hardware (A - Monday Nov. 27, B - Friday Dec. 1)</H3>
+  <H3>Week 14 Hardware</H3>
   <p>
    <ul>
 	<li>This week is the milestone for which a graded build log entry is due (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
