--- a/wk15content.html
+++ b/wk15content.html
@@ -5,7 +5,7 @@
 
  
  <SECTION ID="Section_15">
-  <H3>Week 15 Hardware (A - Monday Dec. 4, B - Friday Dec. 8)</H3>
+  <H3>Week 15 Hardware</H3>
   <p>
    <ul>
 	<li>This week the Presentation is due, link to the slides from your blog as per the week 12 instructions.</li>
