--- a/wk07content.html
+++ b/wk07content.html
@@ -4,7 +4,7 @@
  </HEADER>
  
  <SECTION ID="Section_7">
-  <H3>Week 7 Hardware (A - Monday Oct. 23, B - Friday Oct. 20)</H3>
+  <H3>Week 7 Hardware</H3>
   <p>
    <ul>
 	<li>This week is the mechanical assembly milestone for which a graded build log entry is due (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
