--- a/wk13content.html
+++ b/wk13content.html
@@ -5,7 +5,7 @@
 
 
  <SECTION ID="Section_13">
-  <H3>Week 13 Hardware (A - Monday Nov. 20, B - Friday Nov. 24)</H3>
+  <H3>Week 13 Hardware</H3>
   <p>
    <ul>
 	<li>This week is the milestone for which a graded build log entry is due (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
