--- a/wk04content.html
+++ b/wk04content.html
@@ -9,8 +9,7 @@
    <ul>
  	<li>Budget Due -> trade it for your previously submitted work (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week4AnalyticRubricforBudget.xml">rubric</a>).</li>
 	<li>Remember to wear your glasses for safety.</li>
- 	<li>Proof of purchase due next week by bringing your parts to class and posting on your build log (be sure to not post any sensitive information).</li>
-	<li>Keep in mind that a few seconds of your un-boxing should be videoed to be added to a few seconds of assembly and a few seconds of power-up for your eventual build video.</li> 
+ 	<li>Proof of purchase due next week by posting on your build log (be sure to not post any sensitive information) and, if it wasn't a study day then also by bringing your parts to class which will be the case for week 6.</li>
    </ul>
   </p>
  </SECTION>
