--- a/indexmenu.html
+++ b/indexmenu.html
@@ -3,35 +3,35 @@
                                 <LI><a 
 href="https://github.com/six0four/ceng317">Repository</a></LI>
                                 <LI><a 
-href="#Section_1">Week 1 Hardware</a></LI>
+href="wk01.html">Week 1 Hardware</a></LI>
 								<LI><a 
-href="#Section_2">Week 2 Hardware</a></LI>
+href="wk02.html">Week 2 Hardware</a></LI>
 								<LI><a 
-href="#Section_3">Week 3 Hardware project list</a></LI>
+href="wk03.html">Week 3 Hardware project list</a></LI>
 								<LI><a 
-href="#Section_4">Week 4 Hardware</a></LI>
+href="wk04.html">Week 4 Hardware</a></LI>
 								<LI><a 
-href="#Section_5">Week 5 Hardware</a></LI>
+href="wk05.html">Week 5 Hardware</a></LI>
 								<LI><a 
-href="#Section_6">Week 6 Hardware</a></LI>
+href="wk06.html">Week 6 Hardware</a></LI>
 								<LI><a 
-href="#Section_7">Week 7 Hardware</a></LI>
+href="wk07.html">Week 7 Hardware</a></LI>
 								<LI><a 
-href="#Section_8">Week 8 Hardware</a></LI>
+href="wk08.html">Week 8 Hardware</a></LI>
 								<LI><a 
-href="#Section_9">Week 9 Hardware</a></LI>
+href="wk09.html">Week 9 Hardware</a></LI>
 								<LI><a 
-href="#Section_10">Week 10 Hardware</a></LI>
+href="wk10.html">Week 10 Hardware</a></LI>
 								<LI><a 
-href="#Section_11">Week 11 Hardware</a></LI>
+href="wk11.html">Week 11 Hardware</a></LI>
 								<LI><a 
-href="#Section_12">Week 12 Hardware</a></LI>
+href="wk12.html">Week 12 Hardware</a></LI>
 								<LI><a 
-href="#Section_13">Week 13 Hardware</a></LI>
+href="wk13.html">Week 13 Hardware</a></LI>
 								<LI><a 
-href="#Section_14">Week 14 Hardware</a></LI>
+href="wk14.html">Week 14 Hardware</a></LI>
 								<LI><a 
-href="#Section_15">Week 15 Hardware</a></LI>
+href="wk15.html">Week 15 Hardware</a></LI>
                                 <LI><a 
 href="#Section_100">Week 0 Integration</a></LI>
 								<LI><a 
