--- a/wk03content.html
+++ b/wk03content.html
@@ -12,31 +12,47 @@
     <li>Here is a suggestion when forming your groups for 2017-2018 based on the information I have recieved so far:
 	<li>2018-2019 A Projects:
 	 <ol>
-	  <li>Locker: Yohaan, Stanley, Jeremy.</li>
-	  <li>Health: Mohita, Maheshwerie, Karandeep.</li>
-	  <li>Emoney: Ramya, Sushant, Vinokkumar.</li>
-	  <li>Supermarket: Guru, Abhay, Saqib.</li>
-	  <li>Alexa Skill: Ryan, Patrick, Piyush.</li>
-	  <li>GPS, altimeter, temperature compensation: Ravneet, Princess, Gaganpreet.</li>
-	  <li>Home Security: Vivek, Karel.</li>
+	  <li>Lumi: <a href="https://kenvit.github.io/">Kenneth</a>.</li>
+	  <li>Parking: <a href="https://davista123.github.io/ParkingManagementSystem">David</a>.</li>
+	  <li>: <a href="https://.github.io/"></a>.</li>
+	  <li>: <a href="https://.github.io/"></a>.</li>
+	  <li>: <a href="https://.github.io/"></a>.</li>
+	  <li>Amp: <a href="https://github.com/RomarioT/TPA2016-I2C-controlled Amplifier">Romario</a>.</li>
+	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>.</li>
+	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>.</li>
+	  <li>BME: <a href="https://github.com//">Samuel broken link</a>.</li>
+	  <li>MCP9808: <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean</a>.</li>
+	  <li>UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>.</li>
+	  <li>Power: <a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan</a>.</li>
+	  <li>1306: <a href="https://github.com/dchristie75/SSD1306 monochrome OLED">Delroy</a>.</li>
+	  <li>Colour: <a href="https://github.com/denalddemirxhiu/Colorify/">Denald</a>.</li>
+	  <li>Digiole: <a href="https://github.com/"></a>.</li>
+	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill</a>.</li>
+	  <li>Dashboard: <a href="https://github.com/KaranRayKanwar/DigitalDashboard">Karan Raj</a>.</li>
+	  <li>Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
+	  <li>NFC: <a href="https://github.com/thejavorac/NFC_Platform">Marko</a>.</li>
+	  <li>LED: <a href="https://github.com/Kemar101/LED-Discplay">Kemar</a>.</li>
+	  <li>RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
+	  <li>HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>.</li>
+	  <li>Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
+	  <li>AM2315: <a href="https://github.com/cblakley/SensorEffector">Colin</a>.</li>
      </ol>
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-	  <li>Johnson, Adrian, Raphael.</li>
-	  <li>Robot Arm: Daniel, Aldous, Eric.</li>
-	  <li>PiRover: Christopher, Lawrence.</li>
-	  <li>Parts Crib: David, Oluwatosin, Mohand.</li>
-	  <li>Store security: Mykal, Chigozie, Bradey.</li>
-	  <li>Perhaps an automated sorting system: Bojan, Alexandra, Neille.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
 	 </ol>
 	</li>
 	<li>2018-2019 B Projects:
 	 <ol>
-	  <li>Robotic Navigation: Kevin, Raymond, Kyle.</li>
-      <li>Crystal Fountains: Erick, Slav, Heakeme.</li>
-	  <li>Radio Communications: Andrew, Aldo, Babatunde.</li>
-	  <li>Lumi <a href="https://www.sparkfun.com/products/12664">16 x WS2812 5050 RGB LED?</a>" Access Control: Ruel, Richard, Kenneth.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/"></a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
