Added repository links

--- a/wk03content.html
+++ b/wk03content.html
@@ -35,24 +35,45 @@
 	  <li>RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
 	  <li>HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>.</li>
 	  <li>Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
-	  <li>AM2315: <a href="https://github.com/cblakley/SensorEffector">Colin</a>.</li>
+	  <li>AM2315: <a href="https://github.com/cblakley/SensorEffector">Colin</a>.</li>	  
      </ol>
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
 	  <li>: <a href="https://github.com/"></a>.</li>
 	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
 	 </ol>
 	</li>
 	<li>2018-2019 B Projects:
 	 <ol>
-	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>: <a href="https://github.com/ngtrangminhduc/OverheatSensor"></a>.</li> <!-- look into sensor availability -->
+	  <li>: <a href="https://github.com/n01149380.github.io/LightSensor"></a>.</li>
+	  <li>: <a href="https://github.com/LosesonWinson/CurrentSensor"></a>.</li>
+	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/"></a>.</li>
+	  <li>: <a href="https://github.com/kritish007/portablesolarsystem"></a>.</li>
+	  <li>: <a href="https://github.com/n01103934/Thermometer"></a>.</li>
+	  <li>: <a href="https://github.com/biodunduke/ServoMotorDriver"></a>.</li>
+	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor"></a>.</li>
+	  <li>: <a href="https://github.com/JayJadav/smart_wear"></a>.</li>
+	  <li>: <a href="https://github.com/AldousMendoza/ObstructionSensor"></a>.</li>
+	  <li>: <a href="https://github.com/chenken12/L3GD20H-gyroscope"></a>.</li>
+	  <li>: <a href="https://github.com/anshulsanan/smart_wear"></a>.</li>
+	  <li>: <a href="https://github.com/KogulB/N01093997CENG317Project"></a>.</li>
+	  <li>: <a href="https://github.com/kyelehaynes/N01163090-CENG-317-Project"></a>.</li>
+	  <li>: <a href="https://github.com/ArmanVelani/3axaccel"></a>.</li>
+	  <li>: <a href="https://github.com/Jasleen-Grewal/Nursery"></a>.</li>
+	  <li>: <a href="https://github.com/TarunKaur/Nursery"></a>.</li>
+	  <li>: <a href="https://github.com/Divya-Aggarwal/Nursery"></a>.</li>
+	  <li>: <a href="https://github.com/RutvijDodiya/Temperature-Sensor"></a>.</li>
+	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74"></a>.</li>
+	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor"></a>.</li>
+	  <li>: <a href="https://github.com/sahilsaini0014/ResitiveTouch"></a>.</li>
+	  <li>: <a href="https://github.com/gsmann997/Max3010Sensor"></a>.</li>
+	  <li>: <a href="https://github.com/HumberCampusNavigator/North"></a>.</li>
+	  <li>: <a href="https://github.com/HumberCampusExplorer/CampusExplorer"></a>.</li>
+	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor"></a>.</li>
+	  <li>: <a href="https://github.com/Shubhamsharma1101/TEMPSENS"></a>.</li>
+	  <li>: <a href="https://github.com/sgtepsilon/hifbox"></a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
