--- a/wk03content.html
+++ b/wk03content.html
@@ -16,25 +16,25 @@
 	  <li>: <a href="https://.github.io/"></a>.</li>
 	  <li>: <a href="https://.github.io/"></a>.</li>
 	  <li>: <a href="https://.github.io/"></a>.</li>
-	  <li>Amp: <a href="https://github.com/RomarioT/TPA2016-I2C-controlled Amplifier">Romario</a>.</li>
+	  <li>Amp: <a href="https://github.com/RomarioT/TPA2016-I2C-Controlled-Amplifier">Romario</a>.</li>
 	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>.</li>
 	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>.</li>
 	  <li>BME: <a href="https://github.com//">Samuel broken link</a>.</li>
 	  <li>MCP9808: <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean</a>.</li>
 	  <li>UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>.</li>
 	  <li>Power: <a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan</a>.</li>
-	  <li>1306: <a href="https://github.com/dchristie75/SSD1306 monochrome OLED">Delroy</a>.</li>
+	  <li>1306: <a href="https://github.com/dchristie75/SSD1306 monochrome OLED">Delroy broken link</a>.</li>
 	  <li>Colour: <a href="https://github.com/denalddemirxhiu/Colorify/">Denald</a>.</li>
 	  <li>Digiole: <a href="https://github.com/"></a>.</li>
-	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill</a>.</li>
-	  <li>Dashboard: <a href="https://github.com/KaranRayKanwar/DigitalDashboard">Karan Raj</a>.</li>
+	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill broken link</a>.</li>
+	  <li>Dashboard: <a href="https://github.com/KaranRayKanwar/DigitalDashboard">Karan Raj broken link</a>.</li>
 	  <li>Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
 	  <li>NFC: <a href="https://github.com/thejavorac/NFC_Platform">Marko</a>.</li>
 	  <li>LED: <a href="https://github.com/Kemar101/LED-Discplay">Kemar</a>.</li>
 	  <li>RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
 	  <li>HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>.</li>
 	  <li>Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
-	  <li>AM2315: <a href="https://github.com/cblakley/SensorEffector">Colin</a>.</li>	  
+	  <li>AM2315: <a href="https://github.com/cblakley/SensorEffector">Colin broken link</a>.</li>	  
      </ol>
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
@@ -46,14 +46,14 @@
 	<li>2018-2019 B Projects:
 	 <ol>
 	  <li>: <a href="https://github.com/ngtrangminhduc/OverheatSensor"></a>.</li> <!-- look into sensor availability -->
-	  <li>: <a href="https://github.com/n01149380.github.io/LightSensor"></a>.</li>
+	  <li>: <a href="https://github.com/n01149380.github.io/LightSensor"> broken link</a>.</li>
 	  <li>: <a href="https://github.com/LosesonWinson/CurrentSensor"></a>.</li>
 	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/"></a>.</li>
 	  <li>: <a href="https://github.com/kritish007/portablesolarsystem"></a>.</li>
 	  <li>: <a href="https://github.com/n01103934/Thermometer"></a>.</li>
-	  <li>: <a href="https://github.com/biodunduke/ServoMotorDriver"></a>.</li>
+	  <li>: <a href="https://github.com/biodunduke/ServoMotorDriver"> broken link</a>.</li>
 	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor"></a>.</li>
-	  <li>: <a href="https://github.com/JayJadav/smart_wear"></a>.</li>
+	  <li>: <a href="https://github.com/JayJadav/smart_wear"> broken link</a>.</li>
 	  <li>: <a href="https://github.com/AldousMendoza/ObstructionSensor"></a>.</li>
 	  <li>: <a href="https://github.com/chenken12/L3GD20H-gyroscope"></a>.</li>
 	  <li>: <a href="https://github.com/anshulsanan/smart_wear"></a>.</li>
@@ -66,13 +66,13 @@
 	  <li>: <a href="https://github.com/RutvijDodiya/Temperature-Sensor"></a>.</li>
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74"></a>.</li>
 	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor"></a>.</li>
-	  <li>: <a href="https://github.com/sahilsaini0014/ResitiveTouch"></a>.</li>
+	  <li>: <a href="https://github.com/sahilsaini0014/ResitiveTouch"> broken link</a>.</li>
 	  <li>: <a href="https://github.com/gsmann997/Max3010Sensor"></a>.</li>
 	  <li>: <a href="https://github.com/HumberCampusNavigator/North"></a>.</li>
 	  <li>: <a href="https://github.com/HumberCampusExplorer/CampusExplorer"></a>.</li>
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor"></a>.</li>
 	  <li>: <a href="https://github.com/Shubhamsharma1101/TEMPSENS"></a>.</li>
-	  <li>: <a href="https://github.com/sgtepsilon/hifbox"></a>.</li>
+	  <li>: <a href="https://github.com/sgtepsilon/hifbox"> broken link</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
