--- a/wk03content.html
+++ b/wk03content.html
@@ -12,32 +12,23 @@
     <li>Here is a suggestion when forming your groups for 2017-2018 based on the information I have recieved so far:
 	<li>2018-2019 A Projects:
 	 <ol>
+	  <li>LED: <a href="https://github.com/Kemar101/LED-Discplay">Kemar</a>, RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
+	  <li>NFC: <a href="https://github.com/thejavorac/NFC_Platform">Marko</a>, Digole: <a href="https://github.com/jacobladan/Digole-LCD-Display">Jacob</a>, Colour: <a href="https://github.com/denalddemirxhiu/Colorify/">Denald</a>.</li>
+	  <li>Amp: <a href="https://github.com/RomarioT/TPA2016-I2C-Controlled-Amplifier">Romario</a>, MCP9808: <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean</a>.</li>
+	  <li>Power: <a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan</a>, HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>, Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
+	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
+	  
+	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill broken link</a>, Dashboard: <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj</a>.</li>
 	  <li>Parking: <a href="https://davista123.github.io/ParkingManagementSystem">David</a>.</li>
-	  <li>Amp: <a href="https://github.com/RomarioT/TPA2016-I2C-Controlled-Amplifier">Romario</a>.</li>
-	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>.</li>
-	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>.</li>
 	  <li>BME: <a href="https://github.com//">Samuel broken link</a>.</li>
-	  <li>MCP9808: <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean</a>.</li>
-	  <li>UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>.</li>
-	  <li>Power: <a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan</a>.</li>
-	  <li>1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>.</li>
-	  <li>Colour: <a href="https://github.com/denalddemirxhiu/Colorify/">Denald</a>.</li>
-	  <li>Digole: <a href="https://github.com/jacobladan/Digole-LCD-Display">Jacob</a>.</li>
-	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill broken link</a>.</li>
-	  <li>Dashboard: <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj</a>.</li>
-	  <li>Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
-	  <li>NFC: <a href="https://github.com/thejavorac/NFC_Platform">Marko</a>.</li>
-	  <li>LED: <a href="https://github.com/Kemar101/LED-Discplay">Kemar</a>.</li>
-	  <li>RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
-	  <li>HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>.</li>
-	  <li>Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
 	  <li>AM2315: <a href="https://github.com/cblakley/TempSensor">Colin</a>.</li>	  
+	  <li>Nintendo: <a href="https://github.com//">Andrew</a>.</li>
+	  <li>Lumi: <a href="https://github.com//">Adrien</a>.</li>
      </ol>
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-	  <li>: <a href="https://github.com/"></a>.</li>
-	  <li>: <a href="https://github.com/"></a>.</li>
+	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>.</li>
 	 </ol>
 	</li>
 	<li>2018-2019 B Projects:
