--- a/wk03content.html
+++ b/wk03content.html
@@ -20,7 +20,6 @@
 	  
 	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill broken link</a>, Dashboard: <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj</a>.</li>
 	  <li>Parking: <a href="https://davista123.github.io/ParkingManagementSystem">David</a>.</li>
-	  <li>BME: <a href="https://github.com//">Samuel broken link</a>.</li>
 	  <li>AM2315: <a href="https://github.com/cblakley/TempSensor">Colin</a>.</li>	  
 	  <li>Nintendo: <a href="https://github.com//">Andrew</a>.</li>
 	  <li>Lumi: <a href="https://github.com//">Adrien</a>.</li>
@@ -28,7 +27,9 @@
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>.</li>
+  	  <li>BME: <a href="https://github.com//">Samuel broken link</a>,Kyele,Kogul.</li>
+	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>, Winson</li>
+
 	 </ol>
 	</li>
 	<li>2018-2019 B Projects:
