--- a/wk03content.html
+++ b/wk03content.html
@@ -28,15 +28,15 @@
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
   	  <li>BME: <a href="https://github.com//">Samuel broken link</a>,Kyele,Kogul.</li>
-	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>, Winson</li>
+	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>, Current: <a href="https://github.com/LosesonWinson/CurrentSensor">Winson</a>.</li>
+</li>
 
 	 </ol>
 	</li>
 	<li>2018-2019 B Projects:
 	 <ol>
 	  <li>: <a href="https://github.com/ngtrangminhduc/OverheatSensor">Duc</a>.</li> <!-- look into sensor availability -->
-	  <li>: <a href="https://github.com/n01149380.github.io/LightSensor">Simarjeet broken link</a>.</li>
-	  <li>: <a href="https://github.com/LosesonWinson/CurrentSensor">Winson</a>.</li>
+	  <li>: <a href="https://github.com/n01149380/LightSensor">Simarjeet</a>.</li>
 	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/">Suong</a>.</li>
 	  <li>: <a href="https://github.com/kritish007/portablesolarsystem">Divendra</a>.</li>
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
@@ -55,13 +55,13 @@
 	  <li>: <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>.</li>
 	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>.</li>
-	  <li>: <a href="https://github.com/sahilsaini0014/ResitiveTouch">Sahil broken link</a>.</li>
+	  <li>: <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>.</li>
 	  <li>: <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
 	  <li>: <a href="https://github.com/HumberCampusNavigator/North">Bettin</a>.</li>
 	  <li>: <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot</a>.</li>
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
 	  <li>: <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
-	  <li>: <a href="https://github.com/sgtepsilon/hifbox">Jeremy broken link</a>.</li>
+	  <li>: <a href="https://gitlab.com/sgtepsilon/hifbox.git">Jeremy login required</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
