--- a/wk03content.html
+++ b/wk03content.html
@@ -62,6 +62,7 @@
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
 	  <li>: <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
 	  <li>: <a href="https://gitlab.com/sgtepsilon/hifbox.git">Jeremy login required</a>.</li>
+	  <li>: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
