--- a/wk03content.html
+++ b/wk03content.html
@@ -42,7 +42,7 @@
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
 	  <li>: <a href="https://github.com/biodunduke/ServoMotorDriver">Abiodun broken link</a>.</li>
 	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>.</li>
-	  <li>: <a href="https://github.com/JayJadav/smart_wear">Jay broken link</a>.</li>
+	  <li>: <a href="https://github.com/JayJadav/smartwear">Jay</a>.</li>
 	  <li>: <a href="https://github.com/AldousMendoza/ObstructionSensor">Aldous</a>.</li>
 	  <li>: <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
 	  <li>: <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
@@ -62,7 +62,7 @@
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
 	  <li>: <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
 	  <li>: <a href="https://gitlab.com/sgtepsilon/hifbox.git">Jeremy login required</a>.</li>
-	  <li>: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>.</li>
+	  <li>STM32: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
