--- a/newcontent.html
+++ b/newcontent.html
@@ -26,12 +26,11 @@ href="https://six0four.github.io/ceng317/wk04.html">Week 4 Hardware (Tuesday Sep
  <SECTION ID="Section_5">
   <H3><a 
 href="https://six0four.github.io/ceng317/wk05.html">Week 5 Hardware (Tuesday Oct. 2)</a></H3>
-  <H3>Study Day</H3>
  </SECTION>
 	
  <SECTION ID="Section_6">
   <H3><a 
-href="https://six0four.github.io/ceng317/wk06.html">Week 6 Hardware (Tuesday Oct. 9)</a></H3>
+href="https://six0four.github.io/ceng317/wk06.html">Week 6 Hardware (Tuesday Oct. 9) - Study Day</a></H3>
  </SECTION>
  
  <SECTION ID="Section_7">
