--- a/wk03content.html
+++ b/wk03content.html
@@ -27,7 +27,7 @@
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-  	  <li>BME: <a href="https://github.com//">Samuel broken link</a>,Kyele,Kogul.</li>
+  	  <li>BME: <a href="https://github.com//">Samuel broken link</a>, <a href="https://github.com/KogulB/N01093997CENG317Project">Kogul</a>, <a href="https://github.com/kyelehaynes/N01163090-CENG-317-Project">Kyele</a>.</li>
 	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>, Current: <a href="https://github.com/LosesonWinson/CurrentSensor">Winson</a>.</li>
 </li>
 
@@ -35,34 +35,18 @@
 	</li>
 	<li>2018-2019 B Projects:
 	 <ol>
-	  <li>: <a href="https://github.com/ngtrangminhduc/OverheatSensor">Duc</a>.</li> <!-- look into sensor availability -->
+	  <li>: <a href="https://github.com/ngtrangminhduc/OverheatSensor">Duc</a>, <!-- look into sensor availability --> <a href="https://github.com/AldousMendoza/ObstructionSensor">Aldous</a>, <a href="https://github.com/biodunduke/ServoMotorDriver">Abiodun</a>.</li>
+	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/">Suong</a>, <a href="https://github.com/kritish007/portablesolarsystem">Divendra</a>.</li>
 	  <li>: <a href="https://github.com/n01149380/LightSensor">Simarjeet</a>.</li>
-	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/">Suong</a>.</li>
-	  <li>: <a href="https://github.com/kritish007/portablesolarsystem">Divendra</a>.</li>
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
-	  <li>: <a href="https://github.com/biodunduke/ServoMotorDriver">Abiodun broken link</a>.</li>
-	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>.</li>
-	  <li>: <a href="https://github.com/JayJadav/smartwear">Jay</a>.</li>
-	  <li>: <a href="https://github.com/AldousMendoza/ObstructionSensor">Aldous</a>.</li>
-	  <li>: <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
-	  <li>: <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
-	  <li>: <a href="https://github.com/KogulB/N01093997CENG317Project">Kogul</a>.</li>
-	  <li>: <a href="https://github.com/kyelehaynes/N01163090-CENG-317-Project">Kyele</a>.</li>
-	  <li>: <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>.</li>
-	  <li>: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>.</li>
-	  <li>: <a href="https://github.com/TarunKaur/Nursery">Tarundeep</a>.</li>
-	  <li>: <a href="https://github.com/Divya-Aggarwal/Nursery">Divya</a>.</li>
-	  <li>: <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
-	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>.</li>
-	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>.</li>
-	  <li>: <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>.</li>
-	  <li>: <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
-	  <li>: <a href="https://github.com/HumberCampusNavigator/North">Bettin</a>.</li>
-	  <li>: <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot</a>.</li>
+	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>, <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
+	  <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
+	  <li>: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/TarunKaur/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Nursery">Divya</a>.</li>
+	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>, <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>, <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
+	  <li>: <a href="https://github.com/JayJadav/smartwear">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>, <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
+	  <li>STM32: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot</a>.</li>
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
-	  <li>: <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
-	  <li>: <a href="https://gitlab.com/sgtepsilon/hifbox.git">Jeremy login required</a>.</li>
-	  <li>STM32: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>.</li>
+      <li>: <a href="https://gitlab.com/sgtepsilon/hifbox.git">Jeremy login required</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
