--- a/wk03content.html
+++ b/wk03content.html
@@ -18,16 +18,16 @@
 	  <li>Power: <a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan</a>, HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>, Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
 	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
 	  
-	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill broken link</a>, Dashboard: <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj</a>.</li>
+	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill</a>, Dashboard: <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj</a>.</li>
 	  <li>Parking: <a href="https://davista123.github.io/ParkingManagementSystem">David</a>.</li>
 	  <li>AM2315: <a href="https://github.com/cblakley/TempSensor">Colin</a>.</li>	  
-	  <li>Nintendo: <a href="https://github.com//">Andrew</a>.</li>
-	  <li>Lumi: <a href="https://github.com//">Adrien</a>.</li>
+	  <li>Nintendo: <a href="https://github.com/LeAndrew98/Wii-Nunchuck">Andrew</a>.</li>
+	  <li>Lumi: <a href="https://github.com/AdrienYKC/YongMeIn">Adrien</a>.</li>
      </ol>
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-  	  <li>BME: <a href="https://github.com//">Samuel broken link</a>, <a href="https://github.com/KogulB/N01093997CENG317Project">Kogul</a>, <a href="https://github.com/kyelehaynes/N01163090-CENG-317-Project">Kyele</a>.</li>
+  	  <li>BME: <a href="https://github.com//">Samuel broken link</a>, <a href="https://github.com/KogulB/KogulBCENG317Project">Kogul</a>, <a href="https://github.com/kyelehaynes/CENG317HardwareProject">Kyele</a>.</li>
 	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>, Current: <a href="https://github.com/LosesonWinson/CurrentSensor">Winson</a>.</li>
 </li>
 
@@ -40,13 +40,13 @@
 	  <li>: <a href="https://github.com/n01149380/LightSensor">Simarjeet</a>.</li>
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
 	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>, <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
-	  <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
+	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
 	  <li>: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/TarunKaur/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Nursery">Divya</a>.</li>
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>, <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>, <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
 	  <li>: <a href="https://github.com/JayJadav/smartwear">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>, <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
 	  <li>STM32: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot</a>.</li>
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
-      <li>: <a href="https://gitlab.com/sgtepsilon/hifbox.git">Jeremy login required</a>.</li>
+      <li>: <a href="https://gitlab.com/sgtepsilon/hifbox">Jeremy</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
