--- a/wk03content.html
+++ b/wk03content.html
@@ -19,7 +19,7 @@
 	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
 	  
 	  <li>Speed: <a href="https://github.com/Zhillp/SpeedTracker">Zhill</a>, Dashboard: <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj</a>.</li>
-	  <li>Parking: <a href="https://davista123.github.io/ParkingManagementSystem">David</a>.</li>
+	  <li>Parking: <a href="https://github.com/davista123/ParkingManagementSystem/">David</a>.</li>
 	  <li>AM2315: <a href="https://github.com/cblakley/TempSensor">Colin</a>.</li>	  
 	  <li>Nintendo: <a href="https://github.com/LeAndrew98/Wii-Nunchuck">Andrew</a>.</li>
 	  <li>Lumi: <a href="https://github.com/AdrienYKC/YongMeIn">Adrien</a>.</li>
@@ -27,7 +27,7 @@
 	</li>
 	<li>2018-2019 Mixed (A/B) Projects:
 	 <ol>
-  	  <li>BME: <a href="https://github.com//">Samuel broken link</a>, <a href="https://github.com/KogulB/KogulBCENG317Project">Kogul</a>, <a href="https://github.com/kyelehaynes/CENG317HardwareProject">Kyele</a>.</li>
+  	  <li>BME: <a href="https://github.com/sam9dadet/CENG-317">Samuel</a>, <a href="https://github.com/KogulB/KogulBCENG317Project">Kogul</a>, <a href="https://github.com/kyelehaynes/CENG317HardwareProject">Kyele</a>.</li>
 	  <li>Speedo: <a href="https://github.com/BlueDaroosh/handheldSpedometer">Dariusz</a>, UV: <a href="https://github.com/pctn0007/mySafeUV">Anthony</a>, Current: <a href="https://github.com/LosesonWinson/CurrentSensor">Winson</a>.</li>
 </li>
 
