--- a/wk03content.html
+++ b/wk03content.html
@@ -47,6 +47,7 @@
 	  <li>STM32: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot</a>.</li>
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
       <li>: <a href="https://gitlab.com/sgtepsilon/hifbox">Jeremy</a>.</li>
+      <li>: <a href="https://github.com/darrenprong">Jeremy</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
