--- a/wk01content.html
+++ b/wk01content.html
@@ -59,7 +59,9 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anubhav BNO055 IMU (0x28).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Suong TCS34725 color sensor (0x29).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Juan CAP1188 8-channel Capacitive Touch (0x2A).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anoopjot <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device - TMP36</a> (0x30).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Divendra MCP4725A1 12-bit DAC (0x31, not 0x62).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x32-0x37).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Karan FT6x06 Capacitive Touch Driver (0x38).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anthony VEML6070 UV Index (0x39).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jasleen SSD1305 monochrome OLED (0x3C).</li>
@@ -87,7 +89,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jonas MPR121 12-point capacitive touch sensor (0x5D).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Darren TEA5767 Radio receiver (0x60).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Si5351A Clock Generator (0x61).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Divendra MCP4725A1 12-bit DAC (0x62).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Divendra MCP4725A1 12-bit DAC (0x31, not 0x62).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A2 12-bit DAC (0x64).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A3 12-bit DAC (0x66).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Rula DS3231 RTC (0x68).</li>
