--- a/wk01content.html
+++ b/wk01content.html
@@ -41,7 +41,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 We have some components available from Wurth but, learning to order from say <a href="http://digikey.ca">digikey</a> is helpful. Note that you have until 
 	 Note that certain sensors, flame and radiation (among others), are not appropriate for testing in the lab. Fall 2018 I2C slave device choices for which 6 pin stackable modules must be created:<ol>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jay MAG3110 3-Axis Magnetometer (0x0E).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Adrien Si4713 FM Transmitter with RDS (0x11).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Adrien Si4713 FM Transmitter with RDS, change to NeoPixel (0x11).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> David VCNL40x0 proximity sensor (0x13).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Anshul LIS3DH 3-axis accelerometer (0x18).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Ryan LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
