--- a/wk03content.html
+++ b/wk03content.html
@@ -36,14 +36,14 @@
 	<li>2018-2019 B Projects:
 	 <ol>
 	  <li>: <a href="https://github.com/ngtrangminhduc/OverheatSensor">Duc</a>, <!-- look into sensor availability --> <a href="https://github.com/AldousMendoza/ObstructionSensor">Aldous</a>, <a href="https://github.com/biodunduke/ServoMotorDriver">Abiodun</a>.</li>
-	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/">Suong</a>, <a href="https://github.com/kritish007/portablesolarsystem">Divendra</a>.</li>
+	  <li>: <a href="https://github.com/SuongLuong/SuongLuong/">Suong</a>, <a href="https://github.com/kritish007/portablesolarsystem">Divendra</a>, <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
 	  <li>: <a href="https://github.com/Simarjeet-Brar/CENG317">Simarjeet</a>.</li>
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
 	  <li>: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>, <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
 	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
 	  <li>: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/TarunKaur/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Nursery">Divya</a>.</li>
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>, <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>, <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
-	  <li>: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>, <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
+	  <li>: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
 	  <li>STM32: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan</a>, LSM9DS0: <a href="https://github.com/HumberCampusNavigator/North">Bettin</a>, TMP36: <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot</a>.</li>
 	  <li>: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav</a>.</li>
       <li>: <a href="https://gitlab.com/sgtepsilon/hifbox">Jeremy</a>.</li>
