--- a/wk01content.html
+++ b/wk01content.html
@@ -76,7 +76,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kogul YL-40 PCF8591 (0x48).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Simarjeet TSL2561 light sensor (0x49).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Shubham TMP102 Temperature sensor (0x4A).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ADS1115 4-channel 16-bit ADC (0x4B).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Divendra ADS1115 4-channel 16-bit ADC (0x4B).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Winson INA219 High-Side DC Current/Voltage sensor (0x4C).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MB85RC I2C FRAM (0x50).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Andrew Nintendo Nunchuck controller (0x52).</li>
